syntax = "proto3";

package livekit;
option go_package = "github.com/livekit/livekit-server/proto/livekit";

message SignalRequest {
  oneof message {
    SessionDescription offer = 1;
    SessionDescription negotiate = 2;
    Trickle trickle = 3;
  }
}

message SignalResponse {
  oneof message {
    SessionDescription answer = 1;
    SessionDescription negotiate = 2;
    Trickle trickle = 3;
  }
}

message Trickle {
  string candidate = 1;
}

message SessionDescription {
    string type = 1; // "answer" | "offer" | "pranswer" | "rollback"
    string sdp = 2;
}
